--- a/static/research.html
+++ b/static/research.html
@@ -5,32 +5,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lylo. — Research Questionnaire</title>
 <meta name="description" content="Lylo research questionnaire for solicitors.">
+
 <style>
   :root{
     --bg:#0A1220; --panel:#0B1322; --text:#F5F7FA; --muted:#C7CCD7;
     --border:#1C2A3F; --cta:#111722; --radius:20px; --space:22px;
     --container:1120px;
-    --accent:#54a0ff;        /* taken from your conic gradient */
-    --outline:#2a3d5c;       /* desaturated blue already used in focus rings */
-    --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text",
-           "Helvetica Neue", "Segoe UI", Roboto, Arial, sans-serif;
+    --accent:#54a0ff;        /* matches conic gradient */
+    --outline:#2a3d5c;
+    --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text", "Helvetica Neue", "Segoe UI", Roboto, Arial, sans-serif;
 
-    /* background vars for fixed vignette */
-    --bg-top:#0A1220;            /* start of vignette */
-    --bg-bottom:#080D18;         /* end of vignette */
+    --bg-top:#0A1220;
+    --bg-bottom:#080D18;
     --noise:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO0WQ8AAW0B8w1i6b0AAAAASUVORK5CYII=");
   }
   *{box-sizing:border-box}
   html,body{height:100%}
-  html{ background:var(--bg-bottom); }
   body{
-    margin:0; font-family:var(--font);
-    background:none; /* moved gradients to a fixed layer to avoid scroll shift */
-    color:var(--text);
+    margin:0; font-family:var(--font); color:var(--text);
     -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
-    position:relative;
+    background:none; position:relative;
   }
-  /* Fixed, unified vignette (no sudden change on scroll) */
   body::before{
     content:""; position:fixed; inset:0; pointer-events:none; z-index:-1;
     background:
@@ -38,23 +33,23 @@
       radial-gradient(900px 600px at -10% 30%, rgba(25,195,125,.07), transparent 70%),
       linear-gradient(to bottom, var(--bg-top) 0%, var(--bg-top) 40%, var(--bg-bottom) 100%);
   }
-  /* Subtle texture overlay */
   body::after{
     content:""; position:fixed; inset:0; pointer-events:none; z-index:-1;
     background-image:var(--noise); opacity:.05; mix-blend-mode:soft-light;
   }
 
-  /* Page layout */
   .wrap{
     width:100%; max-width:var(--container); margin:0 auto;
     padding:calc(var(--space)*2) var(--space) calc(var(--space)*3);
     display:grid; gap:calc(var(--space)*2);
   }
   .panel{
-    border:1px solid var(--border);
+    border:1px solid rgba(255,255,255,.06);
     border-radius:var(--radius);
     background:var(--panel);
     padding:calc(var(--space)*1.5);
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.06), 0 20px 60px rgba(0,0,0,.45);
+    backdrop-filter:saturate(115%) blur(4px);
   }
   .header{ text-align:center; margin-bottom:calc(var(--space)*1); }
   .logo{
@@ -66,54 +61,28 @@
   .tagline{ font-size:22px; line-height:1.25; margin:0; color:var(--muted); }
   #warm-status{ font:14px/1.4 system-ui; margin-top:8px; color:#C7CCD7; display:none; }
 
-  /* Form proportions */
-  form{
-    display:grid;
-    gap:24px;
-    max-width:760px;           /* keeps form comfortably narrow */
-    margin:0 auto;
-  }
-  .inline{
-    display:grid;
-    gap:16px;
-  }
-  @media (min-width:720px){
-    .inline{ grid-template-columns:1fr 1fr; } /* pairs short fields */
-  }
-  .field{
-    display:flex;
-    flex-direction:column;
-    gap:8px;
-  }
+  form{ display:grid; gap:24px; max-width:760px; margin:0 auto; }
+  .inline{ display:grid; gap:16px; }
+  @media (min-width:720px){ .inline{ grid-template-columns:1fr 1fr; } }
+  .field{ display:flex; flex-direction:column; gap:8px; }
 
-  /* Inputs */
   label{ font-weight:600; font-size:15px; }
   .help{ color:var(--muted); font-size:13px; line-height:1.4; }
 
   input[type="text"], input[type="email"], select, textarea{
-    width:100%;
-    border:1px solid var(--border);
-    background:#0a1426;
-    color:var(--text);
-    border-radius:14px;
-    padding:14px 14px;
-    font-size:15px;
-    outline:none;
+    width:100%; border:1px solid var(--border);
+    background:#0a1426; color:var(--text);
+    border-radius:14px; padding:14px;
+    font-size:15px; outline:none;
     transition:border-color .15s ease, box-shadow .15s ease, background .2s ease;
   }
-  textarea{
-    min-height:140px;          /* consistent height for big answers */
-    resize:vertical;
-    line-height:1.5;
-  }
+  textarea{ min-height:140px; resize:vertical; line-height:1.5; }
   input:focus, select:focus, textarea:focus{
-    border-color:#2a3d5c;
-    box-shadow:0 0 0 3px rgba(84,160,255,.15);
+    border-color:#2a3d5c; box-shadow:0 0 0 3px rgba(84,160,255,.15);
   }
 
-  /* Mic inside textarea */
   .with-mic{ position:relative; }
-  .with-mic textarea{ padding-right:98px; } /* extra room for button on small screens */
+  .with-mic textarea{ padding-right:98px; }
   .rec-btn{
     border:1px solid var(--border);
     background:#0a1426; color:var(--text);
@@ -124,51 +93,40 @@
   .rec-btn.rec-btn--inside{
     position:absolute; bottom:10px; right:10px; z-index:2;
     padding:8px 12px; box-shadow:0 2px 10px rgba(0,0,0,.25);
-    /* make sure label is always visible on mobile */
     min-width:86px; justify-content:center;
   }
   .rec-btn[aria-pressed="true"]{ background:#101828; transform:translateY(-1px); }
   .rec-btn:focus{ outline:none; box-shadow:0 0 0 3px rgba(84,160,255,.15), 0 2px 10px rgba(0,0,0,.25); }
-  /* IMPORTANT: keep label visible on mobile (no hiding) */
   .rec-btn .label{ white-space:nowrap; }
 
-  /* spinner + status */
-  .transcribe-status{
-    font-size:12px; color:var(--muted); margin-top:6px;
-    display:flex; align-items:center; gap:8px;
-  }
-  .spinner{
-    width:16px; height:16px; border:2px solid #2a3d5c;
-    border-top-color:#F5F7FA; border-radius:50%;
-    animation:spin .8s linear infinite; flex:0 0 16px;
-  }
+  .transcribe-status{ font-size:12px; color:var(--muted); margin-top:6px; display:flex; align-items:center; gap:8px; }
+  .spinner{ width:16px; height:16px; border:2px solid #2a3d5c; border-top-color:#F5F7FA; border-radius:50%; animation:spin .8s linear infinite; flex:0 0 16px; }
   @keyframes spin{ to { transform:rotate(360deg); } }
 
-  /* Submit button (with light outline) */
   .cta{
     display:inline-block; width:100%; max-width:260px; margin-top:6px;
     padding:16px 18px; text-align:center; font-weight:600; font-size:16px;
-    color:var(--text); background:var(--cta); border:1px solid var(--outline); border-radius:14px;
-    position:relative; z-index:0; overflow:hidden; cursor:pointer;
-    transition:transform .06s ease, background .2s ease, outline-color .2s ease, box-shadow .2s ease;
-    outline:2px solid rgba(84,160,255,.18);
-    outline-offset:2px;
+    color:var(--text);
+    border:1px solid transparent; border-radius:14px;
+    background:
+      linear-gradient(180deg,#111722 0%, #0C1423 100%) padding-box,
+      conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b) border-box;
+    position:relative; z-index:0; overflow:hidden; cursor:pointer; text-decoration:none;
+    transition:transform .25s cubic-bezier(.2,.8,.2,1), background-color .25s ease, outline-color .25s ease, box-shadow .25s ease;
+    outline:2px solid rgba(84,160,255,.18); outline-offset:2px;
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.10), 0 8px 24px rgba(0,0,0,.45);
   }
-  .cta::before{
-    content:""; position:absolute; inset:-6px; border-radius:inherit;
-    background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);
-    filter:blur(6px); z-index:-2; animation:spin 4s linear infinite; opacity:0; transition:opacity .3s ease;
-  }
-  .cta::after{ content:""; position:absolute; inset:0; border-radius:inherit; background:var(--cta); z-index:-1; }
   .cta:hover{
-    transform:translateY(-1px); background:#101828;
+    transform:translateY(-1px);
+    background:
+      linear-gradient(180deg,#111A2A 0%, #0C1626 100%) padding-box,
+      conic-gradient(from 90deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b) border-box;
     outline-color:rgba(84,160,255,.28);
+    box-shadow:0 0 0 6px rgba(84,160,255,.12), inset 0 1px 0 rgba(255,255,255,.10), 0 10px 28px rgba(0,0,0,.5);
   }
-  .cta:hover::before{ opacity:1; }
   .cta:focus-visible{
-    outline:3px solid rgba(84,160,255,.38);
-    outline-offset:3px;
-    box-shadow:0 0 0 3px rgba(84,160,255,.18);
+    outline:2px solid rgba(84,160,255,.65); outline-offset:3px;
+    box-shadow:0 0 0 6px rgba(84,160,255,.16);
   }
 
   .note{ color:var(--muted); font-size:13px; }
@@ -176,6 +134,43 @@
     display:none; margin-top:10px; padding:12px 14px;
     border-radius:12px; border:1px solid #1d3a2a;
     background:#0d1f16; color:#d5f5e3; font-size:14px;
+  }
+
+  *,*:before,*:after{ transition:transform .25s cubic-bezier(.2,.8,.2,1), opacity .25s ease, background-color .25s ease, box-shadow .25s ease; }
+  @media (prefers-reduced-motion: reduce){ *,*:before,*:after{ transition:none !important; animation:none !important; } }
+  ::selection{ background:rgba(84,160,255,.28); color:#fff; }
+  :root{ color-scheme:dark; }
+  /* Mobile polish: larger labels, centered questions & CTA */
+  @media (max-width: 640px){
+    .panel{ padding: calc(var(--space)*1.2); }
+    .header{ text-align:center; }
+    .logo{ font-size:36px; }
+    .tagline{ font-size:20px; }
+
+    form{ gap:20px; max-width:100%; }
+    .inline{ grid-template-columns:1fr; gap:14px; }
+
+    /* Bigger, centered question labels */
+    label{ font-size:17px; line-height:1.35; text-align:center; }
+    .help{ text-align:center; }
+
+    /* Inputs a touch taller for thumbs */
+    input[type="text"], input[type="email"], select, textarea{
+      padding:16px 16px; font-size:16px;
+    }
+    textarea{ min-height:160px; }
+
+    /* Keep mic button usable but not crowding */
+    .with-mic textarea{ padding-right:106px; }
+    .rec-btn.rec-btn--inside{ bottom:12px; right:12px; }
+
+    /* Center the submit button and its note */
+    .field:has(.cta){ align-items:center; }
+    .cta{ margin-left:auto; margin-right:auto; }
+    .note{ text-align:center; max-width:28ch; }
+
+    /* Success message centered too */
+    .success{ text-align:center; }
   }
 </style>
 </head>
@@ -363,7 +358,7 @@
   </section>
 </main>
 
-<footer style="text-align:center; padding:calc(var(--space)*2); border-top:1px solid var(--border); color:var(--muted); font-size:14px;">
+<footer style="text-align:center; padding:calc(var(--space)*2); border-top:1px solid rgba(255,255,255,.06); color:var(--muted); font-size:14px;">
   &copy; <script>document.write(new Date().getFullYear())</script> Lylo. All rights reserved.
 </footer>
 
@@ -404,11 +399,9 @@
     e.preventDefault();
     if (!form.checkValidity()) { form.reportValidity(); return; }
 
-    // Collect all field values
     const raw = new FormData(form);
     const all = Object.fromEntries(raw.entries());
 
-    // Build answers object (exclude name/email)
     const { name = "", email = "", ...rest } = all;
     const answers = {
       role: rest.role || "",
@@ -427,7 +420,6 @@
       q_anything: rest.q_anything || ""
     };
 
-    // Optional combined transcript of long answers
     const combinedTranscript =
       [answers.q_bottleneck, answers.q_automate, answers.q_workflow, answers.q_accuracy_speed,
        answers.q_collab, answers.q_errors, answers.q_ai_concerns, answers.ai_view_why,
@@ -532,14 +524,14 @@
         } finally {
           btn.disabled = false;
           btn.setAttribute('aria-pressed', 'false');
-          btn.querySelector('.label')?.replaceChildren('Record'); // keep label visible on mobile
+          btn.querySelector('.label')?.replaceChildren('Record');
           currentBtn = null;
         }
       };
 
       mediaRecorder.start();
       btn.setAttribute('aria-pressed', 'true');
-      btn.querySelector('.label')?.replaceChildren('Stop'); // clearly shows Stop on mobile
+      btn.querySelector('.label')?.replaceChildren('Stop');
       currentBtn = btn;
     }
 
