--- a/static/index.html
+++ b/static/index.html
@@ -81,7 +81,7 @@
         "bullets"
         "cta"
         "note";
-      padding:calc(64px + 24px) var(--space) clamp(20px,3vh,40px); /* nudge up on mobile */
+      padding:calc(64px + 24px) var(--space) clamp(20px,3vh,40px);
     }
     .logo{ margin-bottom:8px; }
     .tagline{ margin-bottom:22px; }
@@ -130,12 +130,20 @@
   .video-wrapper video{width:100%;height:auto;max-height:62vh;display:block;object-fit:cover;border-radius:0;}
   @media(max-width:980px){.video-wrapper{border:1px solid rgba(245,247,250,0.22);}}
 
-  .fullscreen-btn{position:absolute;bottom:12px;right:12px;background:rgba(17,23,34,.7);color:var(--text);font-size:18px;font-weight:600;line-height:1;padding:8px 12px;border:none;border-radius:10px;cursor:pointer;transition:background .2s ease,transform .06s ease;z-index:2;}
-  .fullscreen-btn:hover{background:rgba(17,23,34,.9);transform:translateY(-1px);}
+/* Controls */
+  .fullscreen-btn,
+  .pause-btn{
+    position:absolute;bottom:48px;background:rgba(17,23,34,.7);color:var(--text);
+    font-size:18px;font-weight:600;line-height:1;padding:8px 12px;border:none;border-radius:10px;
+    cursor:pointer;transition:background .2s ease,transform .06s ease;z-index:3;
+  }
+  .fullscreen-btn:hover,.pause-btn:hover{background:rgba(17,23,34,.9);transform:translateY(-1px);}
+  .fullscreen-btn{ right:12px; display:flex; }  /* <-- visible by default (fix) */
+  .pause-btn{ left:12px; display:none; }       /* only visible in fullscreen */
 
-  /* "i" pill (circle -> pill) */
+/* "i" pill */
   .learnmore-btn{
-    position:absolute;top:12px;right:12px;z-index:2;
+    position:absolute;top:12px;right:12px;z-index:3;
     display:inline-flex;align-items:center;justify-content:center;
     width:var(--lm-size); height:var(--lm-size); padding:0; gap:0;
     border-radius:999px;font-size:14px;font-weight:600;text-decoration:none;color:var(--text);
@@ -149,25 +157,63 @@
   .learnmore-btn.expanded .label,.learnmore-btn:hover .label,.learnmore-btn:focus-visible .label{max-width:120px;opacity:1;margin-left:2px;}
   .learnmore-btn:hover{background:rgba(17,23,34,0.8);}
 
-  /* Native fullscreen (desktop/tablet) */
+/* Native fullscreen (desktop/tablet) */
   .video-wrapper:fullscreen,.video-wrapper:-webkit-full-screen{width:100vw;height:100vh;max-width:none;border-radius:0;}
   .video-wrapper:fullscreen video,.video-wrapper:-webkit-full-screen video{width:100%;height:100%;max-height:none;object-fit:contain;border-radius:0;box-shadow:none;}
-  .video-wrapper:fullscreen .fullscreen-btn,.video-wrapper:-webkit-full-screen .fullscreen-btn{top:calc(env(safe-area-inset-top, 0px) + 12px);right:calc(env(safe-area-inset-right, 0px) + 12px);bottom:auto;}
   .video-wrapper:fullscreen .learnmore-btn,.video-wrapper:-webkit-full-screen .learnmore-btn{ display:none; }
+
+  /* Show timeline & pause button ONLY when native fullscreen (desktop) */
+  .video-wrapper:fullscreen .timeline,
+  .video-wrapper:-webkit-full-screen .timeline,
+  .video-wrapper:fullscreen .pause-btn,
+  .video-wrapper:-webkit-full-screen .pause-btn{
+    display:flex;
+  }
+  /* Reposition buttons in native fullscreen for comfort */
+  .video-wrapper:fullscreen .fullscreen-btn,
+  .video-wrapper:-webkit-full-screen .fullscreen-btn{
+    top:calc(env(safe-area-inset-top, 0px) + 12px); right:calc(env(safe-area-inset-right, 0px) + 12px); bottom:auto;
+  }
+  .video-wrapper:fullscreen .pause-btn,
+  .video-wrapper:-webkit-full-screen .pause-btn{
+    top:calc(env(safe-area-inset-top, 0px) + 12px); left:calc(env(safe-area-inset-left, 0px) + 12px); bottom:auto;
+  }
+
+/* ===== Timeline (hidden by default; only in fullscreen) ===== */
+  .timeline{
+    position:absolute; left:10px; right:10px; bottom:12px; height:16px; z-index:3;
+    display:none; align-items:center; touch-action:none; user-select:none;
+  }
+  .timeline .track{
+    position:relative; width:100%; height:6px; border-radius:999px; overflow:hidden;
+    background:rgba(255,255,255,.14); box-shadow:inset 0 1px 0 rgba(0,0,0,.25);
+    transition:height .15s ease;
+  }
+  .timeline:hover .track,
+  .timeline.dragging .track{ height:8px; }
+  .timeline .buffer{position:absolute; left:0; top:0; bottom:0; width:0%; background:rgba(255,255,255,.24);}
+  .timeline .progress{position:absolute; left:0; top:0; bottom:0; width:0%; background:linear-gradient(90deg, rgba(84,160,255,.9), rgba(84,160,255,.6));}
+  .timeline .handle{position:absolute; top:50%; transform:translate(-50%,-50%); width:12px; height:12px; border-radius:999px; background:#fff; opacity:.95; box-shadow:0 2px 8px rgba(0,0,0,.35); pointer-events:none;}
 
   /* iOS simulated fullscreen overlay */
   .fs-overlay{
-    position:fixed; inset:0; z-index:10000; background:#000; display:none;
+    position:fixed; inset:0; z-index:20000; background:#000; display:none;
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   }
   .fs-overlay.open{ display:flex; align-items:center; justify-content:center; }
   .fs-overlay .video-wrapper{ width:100%; height:100%; max-width:none; border-radius:0; box-shadow:none; }
   .fs-overlay .video-wrapper video{ width:100%; height:100%; max-height:none; object-fit:contain; }
   .fs-overlay .learnmore-btn{ display:none; }
-  .fs-overlay .fullscreen-btn{
-    position:absolute; top:calc(env(safe-area-inset-top) + 12px); right:calc(env(safe-area-inset-right) + 12px);
-    bottom:auto;
-  }
+
+  /* Show controls inside overlay (fullscreen state on mobile/iOS) */
+  .fs-overlay .timeline,
+  .fs-overlay .pause-btn,
+  .fs-overlay .fullscreen-btn{ display:flex; }
+
+  /* Safe-area aware placement in overlay */
+  .fs-overlay .fullscreen-btn{ right:calc(env(safe-area-inset-right) + 12px); bottom:calc(env(safe-area-inset-bottom) + 48px); top:auto; }
+  .fs-overlay .pause-btn{ left:calc(env(safe-area-inset-left) + 12px); bottom:calc(env(safe-area-inset-bottom) + 48px); top:auto; }
+  .fs-overlay .timeline{ left:calc(env(safe-area-inset-left) + 10px); right:calc(env(safe-area-inset-right) + 10px); bottom:calc(env(safe-area-inset-bottom) + 12px); }
 
   footer{text-align:center;padding:20px 0;border-top:1px solid rgba(255,255,255,.06);color:var(--muted);font-size:14px;}
 </style>
@@ -210,7 +256,19 @@
           <span class="label">Learn more</span>
         </a>
 
+        <!-- Fullscreen toggle (visible in normal view too) -->
         <button class="fullscreen-btn" id="fullscreenToggle" aria-label="Enter fullscreen">⤢</button>
+        <!-- Play/Pause toggle (shows only in fullscreen) -->
+        <button class="pause-btn" id="pauseToggle" aria-label="Pause">❚❚</button>
+
+        <!-- Timeline (only in fullscreen) -->
+        <div class="timeline" id="videoTimeline" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-label="Video progress">
+          <div class="track">
+            <div class="buffer" id="tlBuffer"></div>
+            <div class="progress" id="tlProgress"></div>
+          </div>
+          <div class="handle" id="tlHandle" aria-hidden="true"></div>
+        </div>
       </div>
     </aside>
 
@@ -245,16 +303,17 @@
   function openLabel(){learnMoreBtn.classList.add('expanded'); const w=learnMoreLabel.scrollWidth; learnMoreLabel.style.maxWidth=w+'px'; learnMoreLabel.style.opacity='1'; learnMoreLabel.style.marginLeft='2px';}
   function closeLabel(){learnMoreLabel.style.maxWidth='0px'; learnMoreLabel.style.opacity='0'; learnMoreLabel.style.marginLeft='0'; learnMoreBtn.classList.remove('expanded');}
   function expandCycle(){openLabel(); setTimeout(()=>{ if(!learnMoreBtn.matches(':hover,:focus,:focus-visible')) closeLabel(); }, 4000);}
-  setTimeout(()=>{ expandCycle(); setInterval(expandCycle, 10000); }, 7000);
+  setTimeout(()=>{ expandCycle(); setInterval(expandCycle, 20000); }, 7000);
   learnMoreBtn.addEventListener('mouseenter', openLabel);
   learnMoreBtn.addEventListener('focus', openLabel);
   learnMoreBtn.addEventListener('mouseleave', closeLabel);
   learnMoreBtn.addEventListener('blur', closeLabel);
 
-  /* ===== Video handling ===== */
+  /* ===== Video handling (iOS simulated fullscreen to avoid exit-freeze) ===== */
   const wrapper = document.getElementById('videoWrapper');
   let video = document.getElementById('lyloVideo');
   const fsBtn = document.getElementById('fullscreenToggle');
+  const pauseBtn = document.getElementById('pauseToggle');
 
   const IS_IOS = (() => {
     const ua = navigator.userAgent || '';
@@ -265,7 +324,7 @@
 
   function safePlay(v=video){ try{ v.play().catch(()=>{});}catch(e){} }
 
-  /* Frame progress watch (for gentle recovery after lock/return) */
+  /* Frame progress watch */
   let lastFrameTS = performance.now();
   function startFrameWatch(v){
     if ('requestVideoFrameCallback' in HTMLVideoElement.prototype){
@@ -275,22 +334,8 @@
       v.addEventListener('timeupdate', ()=>{ lastFrameTS = performance.now(); });
     }
   }
-
   function framesStale(ms){ return (performance.now() - lastFrameTS) > ms; }
 
-  /* Gentle recover after returning from background/lock (iOS only) */
-  function tryRecoverAfterReturn(){
-    if (!IS_IOS) { safePlay(); return; }
-    safePlay();
-    setTimeout(() => {
-      if (!video.paused && framesStale(900)) {
-        // Rebuild the element inline (no fullscreen transitions)
-        rebuildVideoInline();
-      }
-    }, 350);
-  }
-
-  /* Inline rebuild (keeps sources, avoids pipeline stuck state) */
   function rebuildVideoInline(){
     const currentTime = video.currentTime || 0;
     const fresh = video.cloneNode(true);
@@ -302,18 +347,20 @@
     const onReady = () => {
       try { video.currentTime = Math.max(0, currentTime - 1.0); } catch(e){}
       safePlay();
+      updatePauseBtnUI();
     };
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
 
     startFrameWatch(video);
-    // rebind tap fallback
     const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
     video.addEventListener('touchstart', onTap, { passive:true, once:true });
     video.addEventListener('click', onTap, { once:true });
-    video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
+    video.addEventListener('play', updatePauseBtnUI);
+    video.addEventListener('pause', updatePauseBtnUI);
+
+    bindTimeline(true);
   }
 
-  /* Boot video */
   (function boot(){
     const onReady = () => safePlay();
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
@@ -321,18 +368,20 @@
     const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
     video.addEventListener('touchstart', onTap, { passive:true, once:true });
     video.addEventListener('click', onTap, { once:true });
-    video.addEventListener('play', () => { if (video.hasAttribute('controls')) video.removeAttribute('controls'); });
+    video.addEventListener('play', updatePauseBtnUI);
+    video.addEventListener('pause', updatePauseBtnUI);
   })();
 
-  /* Resume after background/lock */
+  function tryRecoverAfterReturn(){
+    if (!IS_IOS) { safePlay(); return; }
+    safePlay();
+    setTimeout(() => { if (!video.paused && framesStale(900)) rebuildVideoInline(); }, 350);
+  }
   document.addEventListener('visibilitychange', () => { if (document.visibilityState === 'visible') tryRecoverAfterReturn(); });
   window.addEventListener('pageshow', tryRecoverAfterReturn);
   window.addEventListener('focus', tryRecoverAfterReturn);
 
-  /* ===== Fullscreen handling =====
-     - Desktop/Android: native Fullscreen API on wrapper
-     - iOS: simulated fullscreen overlay (no native player)
-  */
+  /* ===== Fullscreen handling ===== */
   function isFullscreen(){ return document.fullscreenElement || document.webkitFullscreenElement || null; }
   async function enterNativeFS(){
     if (wrapper.requestFullscreen) return wrapper.requestFullscreen();
@@ -346,6 +395,21 @@
     fsBtn.textContent = full ? '⤡' : '⤢';
     fsBtn.setAttribute('aria-label', full ? 'Exit fullscreen' : 'Enter fullscreen');
   }
+
+  function updatePauseBtnUI(){
+    if (video.paused){
+      pauseBtn.textContent = '▶';
+      pauseBtn.setAttribute('aria-label','Play');
+    } else {
+      pauseBtn.textContent = '❚❚';
+      pauseBtn.setAttribute('aria-label','Pause');
+    }
+  }
+  pauseBtn.addEventListener('click', () => {
+    if (video.paused) safePlay();
+    else video.pause();
+    updatePauseBtnUI();
+  });
 
   /* Simulated fullscreen for iOS */
   let fsOverlay = null, placeholder = null, overlayOpen = false;
@@ -366,6 +430,7 @@
     overlayOpen = true;
     updateFsBtnUI(true);
     safePlay();
+    updatePauseBtnUI();
   }
   function closeOverlay(){
     if (!overlayOpen) return;
@@ -377,10 +442,7 @@
     }
     overlayOpen = false;
     updateFsBtnUI(false);
-    // after “exiting fullscreen” on iOS (overlay), make sure frames advance
-    setTimeout(() => {
-      if (!video.paused && framesStale(700)) rebuildVideoInline();
-    }, 300);
+    setTimeout(() => { if (!video.paused && framesStale(700)) rebuildVideoInline(); }, 300);
   }
 
   fsBtn.addEventListener('click', async () => {
@@ -392,8 +454,98 @@
     }
   });
 
-  document.addEventListener('fullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
-  document.addEventListener('webkitfullscreenchange', () => updateFsBtnUI(!!isFullscreen()));
+  document.addEventListener('fullscreenchange', () => { updateFsBtnUI(!!isFullscreen()); updatePauseBtnUI(); });
+  document.addEventListener('webkitfullscreenchange', () => { updateFsBtnUI(!!isFullscreen()); updatePauseBtnUI(); });
+
+  /* ===== Timeline: fullscreen only ===== */
+  const tl = document.getElementById('videoTimeline');
+  const tlTrack = tl.querySelector('.track');
+  const tlBuffer = document.getElementById('tlBuffer');
+  const tlProgress = document.getElementById('tlProgress');
+  const tlHandle = document.getElementById('tlHandle');
+
+  let dragging = false;
+  let timelineBound = false;
+
+  function fmtPct(x){ return Math.max(0, Math.min(100, x)); }
+
+  function updateBuffer(){
+    try{
+      if (!video.buffered || video.buffered.length === 0 || !isFinite(video.duration)) { tlBuffer.style.width = '0%'; return; }
+      let end = 0;
+      for (let i=0;i<video.buffered.length;i++){ end = Math.max(end, video.buffered.end(i)); }
+      const pct = fmtPct( (end / video.duration) * 100 );
+      tlBuffer.style.width = pct + '%';
+    }catch(e){}
+  }
+
+  function updateProgressUI(){
+    const dur = video.duration || 0;
+    const ct = video.currentTime || 0;
+    const pct = dur ? (ct / dur) * 100 : 0;
+    tlProgress.style.width = pct + '%';
+    tlHandle.style.left = `calc(${pct}% )`;
+    tl.setAttribute('aria-valuenow', Math.round(pct));
+  }
+
+  function rafUpdate(){ if (!dragging) updateProgressUI(); requestAnimationFrame(rafUpdate); }
+
+  function percentFromEvent(evt){
+    const rect = tlTrack.getBoundingClientRect();
+    const clientX = (evt.clientX !== undefined) ? evt.clientX : (evt.touches && evt.touches[0] ? evt.touches[0].clientX : 0);
+    const x = clientX - rect.left;
+    return Math.max(0, Math.min(1, x / rect.width));
+  }
+
+  function seekToPercent(p){
+    if (!isFinite(video.duration) || video.duration <= 0) return;
+    const t = p * video.duration;
+    try { video.currentTime = t; } catch(e){}
+  }
+
+  function onPointerDown(e){
+    dragging = true;
+    tl.classList.add('dragging');
+    const p = percentFromEvent(e);
+    seekToPercent(p);
+    updateProgressUI();
+    e.preventDefault();
+  }
+  function onPointerMove(e){
+    if (!dragging) return;
+    const p = percentFromEvent(e);
+    seekToPercent(p);
+    updateProgressUI();
+    e.preventDefault();
+  }
+  function onPointerUp(){
+    if (!dragging) return;
+    dragging = false;
+    tl.classList.remove('dragging');
+    safePlay();
+  }
+
+  function bindTimeline(rebind=false){
+    if (!timelineBound){
+      tlTrack.addEventListener('pointerdown', onPointerDown);
+      window.addEventListener('pointermove', onPointerMove);
+      window.addEventListener('pointerup', onPointerUp);
+      tlTrack.addEventListener('touchstart', (e)=>onPointerDown(e.touches[0]), { passive:false });
+      window.addEventListener('touchmove', (e)=>{ if (dragging) onPointerMove(e.touches[0]); }, { passive:false });
+      window.addEventListener('touchend', onPointerUp);
+      requestAnimationFrame(rafUpdate);
+      timelineBound = true;
+    }
+
+    video.addEventListener('loadedmetadata', updateProgressUI);
+    video.addEventListener('timeupdate', updateProgressUI);
+    video.addEventListener('progress', updateBuffer);
+    video.addEventListener('loadeddata', updateBuffer);
+
+    if (rebind){ updateProgressUI(); updateBuffer(); }
+  }
+
+  bindTimeline();
 
   /* ===== CTA: mobile-only delayed nav (no spinner) ===== */
   const joinCta = document.getElementById('joinCta');
